fix: added paging to GET /urls